logs/django-appmedia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appmedia'...
Compiling './lib/python3.5/site-packages/appmedia/BeautifulSoup.py'...
***   File "./lib/python3.5/site-packages/appmedia/BeautifulSoup.py", line 404
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/appmedia/management'...
Listing './lib/python3.5/site-packages/appmedia/management/commands'...
Compiling './lib/python3.5/site-packages/appmedia/management/commands/buildmedia.py'...
***   File "./lib/python3.5/site-packages/appmedia/management/commands/buildmedia.py", line 34
    print "copy", media_dir, '->', osp.join(final_dest, app)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/appmedia/management/commands/symlinkmedia.py'...
***   File "./lib/python3.5/site-packages/appmedia/management/commands/symlinkmedia.py", line 20
    print "creating symlinks for app media under %s" % media_path
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/appmedia/views.py'...
***   File "./lib/python3.5/site-packages/appmedia/views.py", line 67
    print osp.join(media_dir, path)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_appmedia-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
